app/stylesheets/body/options-tray/_options-tray.scss
& {
  $tray_padding: 20px;
  $tray_padding_top: 40px;

  @include transition(0.2s);

  width: 0;
  max-width: $options_tray_max_width;

  background-color: $tray_background_color;
  color: $font_color;

  z-index: $options_tray_z_index;

  @import "view-options";

  &.active {
    width: $options_tray_width; 
    padding: $tray_padding;
    padding-top: $tray_padding_top;

    @include respond_to(iphone, landscape) {
      width: $mobile_landscape_options_tray_width;
    }

    @include respond_to(iphone, portrait) {
      width: $mobile_portrait_options_tray_width;
    }

    @include respond_to(mobile, landscape) {
      width: $mobile_landscape_options_tray_width;
    }

    @include respond_to(mobile, portrait) {
      width: $mobile_portrait_options_tray_width;
    }

    * {
      display: block;
    }
  }
}

